Fix crash when right clicking on some locations in the GroupView due to 0 pointer

BUG: 307160